tests/snapshots/sdk_serialization_snapshots__openai__request_minimal.snap
---
source: tests/sdk_serialization_snapshots.rs
expression: req
---
{
  "model": "gpt-4o-mini",
  "messages": [
    {
      "role": "user",
      "content": "Hi"
    }
  ]
}
