tests/snapshots/sdk_serialization_snapshots__openai__request_streaming.snap
---
source: tests/sdk_serialization_snapshots.rs
expression: req
---
{
  "model": "gpt-4o",
  "messages": [
    {
      "role": "user",
      "content": "Stream me"
    }
  ],
  "stream": true
}
