tests/snapshots/sdk_serialization_snapshots__openai__request_with_tools.snap
---
source: tests/sdk_serialization_snapshots.rs
expression: req
---
{
  "model": "gpt-4o",
  "messages": [
    {
      "role": "user",
      "content": "Search docs"
    }
  ],
  "tools": [
    {
      "type": "function",
      "function": {
        "name": "search",
        "description": "Search documents",
        "parameters": {
          "properties": {
            "q": {
              "type": "string"
            }
          },
          "type": "object"
        }
      }
    },
    {
      "type": "function",
      "function": {
        "name": "read_file",
        "description": "Read a file",
        "parameters": {
          "properties": {
            "path": {
              "type": "string"
            }
          },
          "type": "object"
        }
      }
    }
  ],
  "tool_choice": {
    "type": "function",
    "function": {
      "name": "search"
    }
  }
}
