tests/snapshots/sdk_serialization_snapshots__openai__response_success.snap
---
source: tests/sdk_serialization_snapshots.rs
expression: resp
---
{
  "id": "chatcmpl-001",
  "object": "chat.completion",
  "created": 1700000000,
  "model": "gpt-4o-2024-05-13",
  "choices": [
    {
      "index": 0,
      "message": {
        "role": "assistant",
        "content": "The answer is 4."
      },
      "finish_reason": "stop"
    }
  ],
  "usage": {
    "prompt_tokens": 25,
    "completion_tokens": 8,
    "total_tokens": 33
  }
}
