tests/snapshots/sdk_serialization_snapshots__openai__response_tool_calls.snap
---
source: tests/sdk_serialization_snapshots.rs
expression: resp
---
{
  "id": "chatcmpl-tc",
  "object": "chat.completion",
  "created": 1700000200,
  "model": "gpt-4o",
  "choices": [
    {
      "index": 0,
      "message": {
        "role": "assistant",
        "tool_calls": [
          {
            "id": "call_xyz",
            "type": "function",
            "function": {
              "name": "get_weather",
              "arguments": "{\"location\":\"SF\"}"
            }
          }
        ]
      },
      "finish_reason": "tool_calls"
    }
  ],
  "usage": {
    "prompt_tokens": 50,
    "completion_tokens": 20,
    "total_tokens": 70
  }
}
