tests/snapshots/sdk_serialization_snapshots__openai__stream_chunk_tool_call.snap
---
source: tests/sdk_serialization_snapshots.rs
expression: chunk
---
{
  "id": "chatcmpl-s2",
  "object": "chat.completion.chunk",
  "created": 1700000400,
  "model": "gpt-4o",
  "choices": [
    {
      "index": 0,
      "delta": {
        "tool_calls": [
          {
            "index": 0,
            "id": "call_1",
            "type": "function",
            "function": {
              "name": "search",
              "arguments": "{\"q\":\"rust\"}"
            }
          }
        ]
      }
    }
  ]
}
